--- a/moa/src/main/resources/templates/fragments/header.html
+++ b/moa/src/main/resources/templates/fragments/header.html
@@ -10,4 +10,8 @@ ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
     <!-- Custom styles for this template -->
 <!--    <link href="/css/jumbotron-narrow.css" rel="stylesheet">-->
+
+    <!--  XMLHttpRequest(ajax, fetch)  없어도 된다고는 하는데 검증 해봐야 함  -->
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
