--- a/moa/src/main/resources/templates/boards/boardForm.html
+++ b/moa/src/main/resources/templates/boards/boardForm.html
@@ -10,8 +10,9 @@
 
     <h3>글 작성</h3>
     <form class="form-floating" action="/boards/new" th:object="${boardForm}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <div>
-            <input class="form-control border-bottom border-secondary" th:field="*{title}" type="text"
+            <input class="form-control" th:field="*{title}" type="text"
                    placeholder="제목을 입력하세요."/>
         </div>
         <div>
