--- a/moa/src/main/resources/templates/boards/reply/replyForm.html
+++ b/moa/src/main/resources/templates/boards/reply/replyForm.html
@@ -8,10 +8,10 @@
 <div class="container">
     <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
     <h3>대댓글</h3>
-<!--          th:action="@{/comments/{boardId}/{parentId}(boardId = *{boardId}, parentId = *{parentId})}"-->
     <form th:object="${commentForm}"
           th:action="@{/comments/reply/{boardId}(boardId = *{boardId})}"
           method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <div class="form-floating mb-3">
             <input type="hidden" th:field="*{parentId}">
             <input type="text" th:class="form-control"
