--- a/moa/src/main/resources/templates/members/memberUpdate.html
+++ b/moa/src/main/resources/templates/members/memberUpdate.html
@@ -10,7 +10,7 @@
 
     <h3>회원 정보 변경</h3>
     <form action="/members/update" th:object="${memberForm}" method="post">
-        <th:block><input type="hidden" th:value="*{id}" th:field="*{id}"/></th:block>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <div class="form-floating mb-3">
             <input type="text" class="form-control" th:field="*{name}">
             <label th:for="name" class="form-label">이름</label>
